--- a/Introdução-ao-Javascript/index.html
+++ b/Introdução-ao-Javascript/index.html
@@ -2,15 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link rel="stylesheet" href="assets/css/style.css">
-    <script src="assets/js/script.js"></script>
-    
+    <link rel="stylesheet" href="assets/css/style.css" />
     <title>Projeto Contador</title>
 </head>
 <body>
-    
+    <h1>Contador</h1>
+    <p>Clique nos botões para alterar o valor..</p>
+    <div id="counter">
+        <button name="subtrair" onclick="decrement()">-</button>
+        <span id="currentNumber">0</span>
+        <button name="adicionar" onclick="increment()">+</button>
+    </div>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
